Need to rethink support for identifier mapping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ importFrom(BiocGenerics,combine)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,order)
 importFrom(BiocGenerics,organism)
+importFrom(BiocGenerics,sort)
 importFrom(BiocGenerics,unique)
 importFrom(BiocGenerics,unlist)
 importFrom(BiocGenerics,unsplit)
@@ -140,6 +141,7 @@ importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
 importFrom(S4Vectors,complete.cases)
+importFrom(S4Vectors,decode)
 importFrom(S4Vectors,head)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
