Update RankedList approach and don't export DataFrame method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ importFrom(AcidGenerics,results)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,showHeader)
 importFrom(AcidGenerics,snakeCase)
+importFrom(AcidGenerics,stripGeneVersions)
 importFrom(AcidGenomes,mapHumanOrthologs)
 importFrom(AcidMarkdown,markdownHeader)
 importFrom(AcidPlots,"!!")
@@ -224,6 +225,7 @@ importMethodsFrom(AcidBase,showHeader)
 importMethodsFrom(AcidExperiment,Gene2Symbol)
 importMethodsFrom(AcidExperiment,export)
 importMethodsFrom(AcidExperiment,mapGenesToRownames)
+importMethodsFrom(AcidGenomes,stripGeneVersions)
 importMethodsFrom(AcidPlots,plotHeatmap)
 importMethodsFrom(AcidPlots,plotUpset)
 importMethodsFrom(AcidPlyr,leftJoin)
