Rework to support fgsea engine change

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,6 +187,7 @@ importFrom(goalie,isAFile)
 importFrom(goalie,isAll)
 importFrom(goalie,isAlpha)
 importFrom(goalie,isAny)
+importFrom(goalie,isBiocParallelParam)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
@@ -217,10 +218,10 @@ importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(pipette,export)
 importFrom(pipette,import)
-importFrom(sessioninfo,session_info)
 importFrom(stats,reorder)
 importFrom(utils,packageName)
 importFrom(utils,packageVersion)
+importFrom(utils,sessionInfo)
 importMethodsFrom(AcidBase,showHeader)
 importMethodsFrom(AcidExperiment,Gene2Symbol)
 importMethodsFrom(AcidExperiment,export)
