--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidGSEA
 Title: Acid Genomics GSEA
 Description: Perform parameterized gene set enrichment analysis (GSEA)
     on multiple differential expression contrasts.
-Version: 0.8.6.9000
-Date: 2022-09-16
+Version: 0.8.6
+Date: 2022-10-25
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -24,34 +24,34 @@ Encoding: UTF-8
 LazyData: false
 Depends: R (>= 4.2)
 Imports:
-    AcidBase,
-    AcidCLI,
-    AcidExperiment,
-    AcidGenerics,
-    AcidGenomes,
-    AcidMarkdown,
-    AcidPlots,
-    AcidPlyr,
-    BiocGenerics,
-    DESeqAnalysis,
-    GenomeInfoDb,
-    IRanges,
-    S4Vectors,
-    SummarizedExperiment,
-    fgsea,
-    ggplot2,
-    goalie,
+    AcidBase (>= 0.6.8),
+    AcidCLI (>= 0.2.4),
+    AcidExperiment (>= 0.4.4),
+    AcidGenerics (>= 0.6.4),
+    AcidGenomes (>= 0.4.4),
+    AcidMarkdown (>= 0.2.5),
+    AcidPlots (>= 0.5.2),
+    AcidPlyr (>= 0.3.2),
+    BiocGenerics (>= 0.6.4),
+    DESeqAnalysis (>= 0.6.6),
+    GenomeInfoDb (>= 1.32.4),
+    IRanges (>= 2.30.1),
+    S4Vectors (>= 0.34.0),
+    SummarizedExperiment (>= 1.26.1),
+    fgsea (>= 1.22.0),
+    ggplot2 (>= 3.3.6),
+    goalie (>= 0.6.6),
     methods,
-    pipette,
+    pipette (>= 0.10.0),
     stats,
-    syntactic,
+    syntactic (>= 0.6.3),
     utils
 Suggests:
-    AcidTest,
-    BiocParallel,
-    basejump,
-    knitr,
-    rmarkdown,
+    AcidTest (>= 0.7.0),
+    BiocParallel (>= 1.30.4),
+    basejump (>= 0.16.1),
+    knitr (>= 1.40),
+    rmarkdown (>= 2.17),
     testthat (>= 3.0.0)
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
