--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,6 @@ importFrom(AcidBase,basenameSansExt)
 importFrom(AcidBase,initDir)
 importFrom(AcidBase,methodFunction)
 importFrom(AcidBase,realpath)
-importFrom(AcidBase,requireNamespaces)
 importFrom(AcidBase,showSlotInfo)
 importFrom(AcidBase,standardizeCall)
 importFrom(AcidCLI,abort)
@@ -204,6 +203,7 @@ importFrom(goalie,isScalar)
 importFrom(goalie,isScalarInteger)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
+importFrom(goalie,requireNamespaces)
 importFrom(goalie,validate)
 importFrom(methods,"slot<-")
 importFrom(methods,as)
