Update AcidPlots NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,12 +115,11 @@ importFrom(AcidGenerics,snakeCase)
 importFrom(AcidGenerics,stripGeneVersions)
 importFrom(AcidGenomes,mapHumanOrthologs)
 importFrom(AcidMarkdown,markdownHeader)
-importFrom(AcidPlots,"!!")
+importFrom(AcidPlots,.data)
+importFrom(AcidPlots,acid_scale_color_discrete)
+importFrom(AcidPlots,acid_scale_fill_discrete)
 importFrom(AcidPlots,acid_theme_light)
-importFrom(AcidPlots,autoDiscreteColorScale)
-importFrom(AcidPlots,autoDiscreteFillScale)
 importFrom(AcidPlots,matchLabels)
-importFrom(AcidPlots,sym)
 importFrom(BiocGenerics,"%in%")
 importFrom(BiocGenerics,combine)
 importFrom(BiocGenerics,lapply)
