--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,9 +91,11 @@ importFrom(AcidGenerics,contrastNames)
 importFrom(AcidGenerics,contrastSamples)
 importFrom(AcidGenerics,convertToHuman)
 importFrom(AcidGenerics,enrichedGeneSets)
+importFrom(AcidGenerics,export)
 importFrom(AcidGenerics,geneSet)
 importFrom(AcidGenerics,geneSetNames)
 importFrom(AcidGenerics,geneSetResults)
+importFrom(AcidGenerics,import)
 importFrom(AcidGenerics,leadingEdge)
 importFrom(AcidGenerics,leftJoin)
 importFrom(AcidGenerics,makeNames)
@@ -216,8 +218,6 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(pipette,export)
-importFrom(pipette,import)
 importFrom(stats,reorder)
 importFrom(utils,packageName)
 importFrom(utils,packageVersion)
