--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export("contrastNames<-")
 export("nesThreshold<-")
 export(AcidGSEATestsURL)
 export(FGSEAList)
-export(Gene2Symbol)
+export(GeneToSymbol)
 export(RankedList)
 export(alphaThreshold)
 export(collectionNames)
@@ -37,7 +37,7 @@ exportMethods("collectionNames<-")
 exportMethods("contrastNames<-")
 exportMethods("nesThreshold<-")
 exportMethods(FGSEAList)
-exportMethods(Gene2Symbol)
+exportMethods(GeneToSymbol)
 exportMethods(RankedList)
 exportMethods(alphaThreshold)
 exportMethods(collectionNames)
@@ -80,7 +80,7 @@ importFrom(AcidGenerics,"alphaThreshold<-")
 importFrom(AcidGenerics,"collectionNames<-")
 importFrom(AcidGenerics,"contrastNames<-")
 importFrom(AcidGenerics,"nesThreshold<-")
-importFrom(AcidGenerics,Gene2Symbol)
+importFrom(AcidGenerics,GeneToSymbol)
 importFrom(AcidGenerics,alphaThreshold)
 importFrom(AcidGenerics,as.DESeqDataSet)
 importFrom(AcidGenerics,as.DataFrame)
@@ -223,7 +223,7 @@ importFrom(utils,packageName)
 importFrom(utils,packageVersion)
 importFrom(utils,sessionInfo)
 importMethodsFrom(AcidBase,showHeader)
-importMethodsFrom(AcidExperiment,Gene2Symbol)
+importMethodsFrom(AcidExperiment,GeneToSymbol)
 importMethodsFrom(AcidExperiment,export)
 importMethodsFrom(AcidExperiment,mapGenesToRownames)
 importMethodsFrom(AcidGenomes,stripGeneVersions)
