Enforce strict camel case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export("alphaThreshold<-")
 export("collectionNames<-")
 export("contrastNames<-")
 export("nesThreshold<-")
-export(AcidGSEATestsURL)
-export(FGSEAList)
+export(AcidGseaTestsUrl)
+export(FgseaList)
 export(GeneToSymbol)
 export(RankedList)
 export(alphaThreshold)
@@ -25,18 +25,18 @@ export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
 export(plotGeneSet)
 export(plotHeatmap)
-export(plotLFC)
-export(plotNES)
+export(plotLfc)
+export(plotNes)
 export(prepareGeneSetFiles)
 export(results)
 export(updateObject)
-exportClasses(FGSEAList)
+exportClasses(FgseaList)
 exportClasses(RankedList)
 exportMethods("alphaThreshold<-")
 exportMethods("collectionNames<-")
 exportMethods("contrastNames<-")
 exportMethods("nesThreshold<-")
-exportMethods(FGSEAList)
+exportMethods(FgseaList)
 exportMethods(GeneToSymbol)
 exportMethods(RankedList)
 exportMethods(alphaThreshold)
@@ -56,8 +56,8 @@ exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
 exportMethods(plotGeneSet)
 exportMethods(plotHeatmap)
-exportMethods(plotLFC)
-exportMethods(plotNES)
+exportMethods(plotLfc)
+exportMethods(plotNes)
 exportMethods(results)
 exportMethods(show)
 exportMethods(updateObject)
@@ -107,8 +107,8 @@ importFrom(AcidGenerics,plotEnrichedGeneSets)
 importFrom(AcidGenerics,plotEnrichedUpset)
 importFrom(AcidGenerics,plotGeneSet)
 importFrom(AcidGenerics,plotHeatmap)
-importFrom(AcidGenerics,plotLFC)
-importFrom(AcidGenerics,plotNES)
+importFrom(AcidGenerics,plotLfc)
+importFrom(AcidGenerics,plotNes)
 importFrom(AcidGenerics,plotUpset)
 importFrom(AcidGenerics,results)
 importFrom(AcidGenerics,selectIf)
