Use parallel instead of BiocParallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,7 +188,6 @@ importFrom(goalie,isAFile)
 importFrom(goalie,isAll)
 importFrom(goalie,isAlpha)
 importFrom(goalie,isAny)
-importFrom(goalie,isBiocParallelParam)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
@@ -218,6 +217,7 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(parallel,mclapply)
 importFrom(stats,reorder)
 importFrom(utils,packageName)
 importFrom(utils,packageVersion)
