--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidGSEA
 Title: Acid Genomics GSEA
 Description: Perform parameterized gene set enrichment analysis (GSEA)
     on multiple differential expression contrasts.
-Version: 0.9.0.9000
-Date: 2023-09-26
+Version: 0.9.0
+Date: 2023-10-04
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -44,12 +44,12 @@ Imports:
     pipette (>= 0.11.2),
     syntactic (>= 0.6.6),
     methods,
+    parallel,
     stats,
     utils
 Suggests:
     AcidDevTools (>= 0.7.0),
     AcidTest (>= 0.7.2),
-    BiocParallel (>= 1.34.0),
     basejump (>= 0.17.0),
     knitr (>= 1.43),
     rmarkdown (>= 2.24),
