--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidGSEA
 Title: Acid Genomics GSEA
 Description: Perform parameterized gene set enrichment analysis (GSEA)
     on multiple differential expression contrasts.
-Version: 0.9.0
-Date: 2023-10-04
+Version: 0.9.1
+Date: 2025-03-24
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -22,40 +22,40 @@ BugReports: https://github.com/acidgenomics/r-acidgsea/issues/
 License: AGPL-3
 Encoding: UTF-8
 LazyData: false
-Depends: R (>= 4.3)
+Depends: R (>= 4.0)
 Imports:
-    AcidBase (>= 0.7.0),
-    AcidCLI (>= 0.3.0),
-    AcidExperiment (>= 0.5.0),
-    AcidGenerics (>= 0.7.1),
-    AcidGenomes (>= 0.6.0),
-    AcidMarkdown (>= 0.3.0),
-    AcidPlots (>= 0.7.0),
-    AcidPlyr (>= 0.5.0),
-    BiocGenerics (>= 0.46.0),
-    DESeqAnalysis (>= 0.7.0),
-    GenomeInfoDb (>= 1.36.0),
-    IRanges (>= 2.34.0),
-    S4Vectors (>= 0.38.0),
-    SummarizedExperiment (>= 1.30.0),
-    fgsea (>= 1.26.0),
-    ggplot2 (>= 3.4.3),
-    goalie (>= 0.7.1),
-    pipette (>= 0.14.0),
-    syntactic (>= 0.7.0),
+    AcidBase,
+    AcidCLI,
+    AcidExperiment,
+    AcidGenerics,
+    AcidGenomes,
+    AcidMarkdown,
+    AcidPlots,
+    AcidPlyr,
+    BiocGenerics,
+    DESeqAnalysis,
+    GenomeInfoDb,
+    IRanges,
+    S4Vectors,
+    SummarizedExperiment,
+    fgsea,
+    ggplot2,
+    goalie,
     methods,
     parallel,
+    pipette,
     stats,
+    syntactic,
     utils
 Suggests:
-    AcidDevTools (>= 0.7.0),
-    AcidTest (>= 0.8.0),
-    basejump (>= 0.18.0),
-    knitr (>= 1.44),
-    rmarkdown (>= 2.25),
-    testthat (>= 3.1.10)
+    AcidDevTools,
+    AcidTest,
+    basejump,
+    knitr,
+    rmarkdown,
+    testthat
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
